Big format with prettier.

--- a/src/app.html
+++ b/src/app.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="Lista de todas las películas y series donde puedes guardar en una lista aquellas películas o series que quieres ver, con toda la info y detalles de cada una así como también su respectivo trailer">
-		<title>MyMovieList</title>
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="icon" href="%sveltekit.assets%/favicon.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Lista de todas las películas y series donde puedes guardar en una lista aquellas películas o series que quieres ver, con toda la info y detalles de cada una así como también su respectivo trailer"
+        />
+        <title>MyMovieList</title>
+        %sveltekit.head%
+    </head>
+    <body data-sveltekit-preload-data="hover">
+        <div style="display: contents">%sveltekit.body%</div>
+    </body>
 </html>
