Big refactor and format changes

--- a/src/app.html
+++ b/src/app.html
@@ -6,8 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
             name="description"
-            content="Lista de todas las películas y series donde puedes guardar en una lista aquellas películas o series que quieres ver, con toda la info y detalles de cada una así como también su respectivo trailer"
-        />
+            content="Lista de todas las películas y series donde puedes guardar en una lista aquellas películas o series que quieres ver, con toda la info y detalles de cada una así como también su respectivo trailer" />
         <title>MyMovieList</title>
         %sveltekit.head%
     </head>
